NC-2: Commit css and html file

--- a/3.CSS/activity2.html
+++ b/3.CSS/activity2.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>My test page</title>
-        <link rel="stylesheet" href="../3.CSS/myStyle.css">
+        <link rel="stylesheet" href="myStyle.css">
     </head>
     <body>
 
