--- a/3.CSS/bootstrap3_activity/myprofile.html
+++ b/3.CSS/bootstrap3_activity/myprofile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Erdzventure Blog</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="css/bootstrap.min.css">
    <link rel="stylesheet" href="css/style.css">
